[main system] add new vps_localizer, poi_localizer, and revise some naming.

--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -116,6 +116,8 @@
     <ClInclude Include="..\..\src\localizer\localizer_simple.hpp" />
     <ClInclude Include="..\..\src\localizer\path_projector.hpp" />
     <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
+    <ClInclude Include="..\..\src\ocr_recog\ocr_localizer.hpp" />
+    <ClInclude Include="..\..\src\ocr_recog\ocr_recognizer.hpp" />
     <ClInclude Include="..\..\src\utils\ekf.hpp" />
     <ClInclude Include="..\..\src\utils\map_painter.hpp" />
     <ClInclude Include="..\..\src\utils\opencx.hpp" />
@@ -125,6 +127,8 @@
     <ClInclude Include="..\..\src\utils\utility.hpp" />
     <ClInclude Include="..\..\src\utils\utm_converter.hpp" />
     <ClInclude Include="..\..\src\utils\vvs.h" />
+    <ClInclude Include="..\..\src\vps\vps.hpp" />
+    <ClInclude Include="..\..\src\vps\vps_localizer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
