[main system] add RoadTheta localizer, minor fixes (parameter parsing, ...)

--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -116,9 +116,12 @@
     <ClInclude Include="..\..\src\localizer\localizer_interface.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer_simple.hpp" />
     <ClInclude Include="..\..\src\localizer\path_projector.hpp" />
+    <ClInclude Include="..\..\src\lrpose_recog\lrpose_recognizer.hpp" />
     <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="..\..\src\ocr_recog\ocr_localizer.hpp" />
     <ClInclude Include="..\..\src\ocr_recog\ocr_recognizer.hpp" />
+    <ClInclude Include="..\..\src\roadtheta\roadtheta.hpp" />
+    <ClInclude Include="..\..\src\roadtheta\roadtheta_localizer.hpp" />
     <ClInclude Include="..\..\src\utils\ekf.hpp" />
     <ClInclude Include="..\..\src\utils\map_painter.hpp" />
     <ClInclude Include="..\..\src\utils\opencx.hpp" />
