[localizer] data_loader added (src/localizer/data_loader.hpp)

--- a/examples/localizer_test/localizer_test.vcxproj.filters
+++ b/examples/localizer_test/localizer_test.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="test_utility.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\localizer\data_loader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
