--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -109,22 +109,19 @@
     <ClInclude Include="..\..\src\core\shared_date.hpp" />
     <ClInclude Include="..\..\src\guidance\guidance.hpp" />
     <ClInclude Include="..\..\src\intersection_cls\intersection_localizer.hpp" />
+    <ClInclude Include="..\..\src\localizer\data_loader.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer_base.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer_ekf.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer_ekf_variants.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer_interface.hpp" />
-    <ClInclude Include="..\..\src\localizer\localizer_simple.hpp" />
     <ClInclude Include="..\..\src\localizer\path_projector.hpp" />
     <ClInclude Include="..\..\src\lrpose_recog\lrpose_recognizer.hpp" />
     <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="..\..\src\ocr_recog\ocr_localizer.hpp" />
     <ClInclude Include="..\..\src\roadtheta\roadtheta.hpp" />
     <ClInclude Include="..\..\src\roadtheta\roadtheta_localizer.hpp" />
-    <ClInclude Include="..\..\src\utils\ekf.hpp" />
     <ClInclude Include="..\..\src\utils\map_painter.hpp" />
-    <ClInclude Include="..\..\src\utils\opencx.hpp" />
-    <ClInclude Include="..\..\src\utils\opensx.hpp" />
     <ClInclude Include="..\..\src\utils\python_embedding.hpp" />
     <ClInclude Include="..\..\src\utils\tts.hpp" />
     <ClInclude Include="..\..\src\utils\utility.hpp" />
