--- a/examples/dg_simple/dg_simple.vcxproj.filters
+++ b/examples/dg_simple/dg_simple.vcxproj.filters
@@ -53,12 +53,6 @@
     <ClInclude Include="..\..\src\core\path.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\utils\opencx.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\utils\opensx.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\utils\python_embedding.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -75,12 +69,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\localizer\localizer_ekf_variants.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\localizer\localizer_simple.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\utils\ekf.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\utils\tts.hpp">
@@ -126,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\roadtheta\roadtheta_localizer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\localizer\data_loader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
