--- a/examples/dg_log_viewer/dg_log_viewer.vcxproj
+++ b/examples/dg_log_viewer/dg_log_viewer.vcxproj
@@ -68,7 +68,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\..\EXTERNAL\OpenCV\lib;..\..\EXTERNAL\python\lib;..\..\EXTERNAL\curl\lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world411d.lib;python38_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world430d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -87,17 +87,15 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\..\EXTERNAL\OpenCV\lib;..\..\EXTERNAL\python\lib;..\..\EXTERNAL\curl\lib;..\..\EXTERNAL\curl\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world411.lib;python38.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world430.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
+    <ClCompile Include="..\..\src\core\map.cpp" />
     <ClCompile Include="..\..\src\guidance\guidance.cpp" />
-    <ClCompile Include="..\..\src\localizer\road_map.cpp" />
-    <ClCompile Include="..\..\src\localizer\utm_converter.cpp" />
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
-    <ClCompile Include="..\..\src\utils\python_embedding.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -111,7 +109,6 @@
     <ClInclude Include="..\..\src\utils\opencx.hpp" />
     <ClInclude Include="..\..\src\utils\opensx.hpp" />
     <ClInclude Include="..\..\src\utils\python_embedding.hpp" />
-    <ClInclude Include="..\..\src\utils\utility.hpp" />
     <ClInclude Include="..\..\src\utils\vvs.h" />
     <ClInclude Include="..\..\src\vps\vps.hpp" />
   </ItemGroup>
