--- a/examples/exploration_test/CMakeLists.txt
+++ b/examples/exploration_test/CMakeLists.txt
@@ -1,23 +1,24 @@
-cmake_minimum_required(VERSION 2.8)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
-set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
-set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
-
+cmake_minimum_required(VERSION 2.8.3)
 get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g")
+set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
+set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
+set(EXTDIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL")
+set(FS_LIBRARIES "-lstdc++fs")
+
 find_package( PythonInterp 3.6 REQUIRED )
 find_package( PythonLibs 3.6 REQUIRED )
-find_package( OpenCV 4.0 REQUIRED )
+find_package( OpenCV REQUIRED )
 
 INCLUDE_DIRECTORIES ( ${SRCDIR} ${PYTHON_INCLUDE_DIRS} )
 
-file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/exploration/*.cpp ${SRCDIR}/utils/*.cpp *.cpp)
+file(GLOB SOURCES ${SRCDIR}/exploration/*.cpp ${SRCDIR}/utils/*.cpp *.cpp)
  
 add_executable( ${PROJECT_NAME} ${SOURCES} )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} ${FS_LIBRARIES} )
 
 install( TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR} )
