--- a/examples/map_manager_test/CMakeLists.txt
+++ b/examples/map_manager_test/CMakeLists.txt
@@ -1,30 +1,29 @@
-cmake_minimum_required(VERSION 2.8)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS		"${CMAKE_CXX_FLAGS} -pthread")
-set(BINDIR			"${CMAKE_SOURCE_DIR}/../../bin")
-set(SRCDIR			"${CMAKE_SOURCE_DIR}/../../src")
-set(CURL_LIBRARY		"-lcurl") 
-set(RAPIDJSON_INCLUDE_DIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL/rapidjson/include")
-set(EXTDIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL")
-
+cmake_minimum_required(VERSION 2.8.3)
 get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g")
+set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
+set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
+set(EXTDIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL")
+set(RAPIDJSON_INC "${EXTDIR}/rapidjson/include")
+set(CURL_INC "${EXTDIR}/curl/include")
+set(CURL_LIBRARIES "-lcurl")
+set(JSONCPP_LIBRARIES "-ljsoncpp")
+set(FS_LIBRARIES "-lstdc++fs")
+
 find_package( PythonInterp 3.6 REQUIRED )
 find_package( PythonLibs 3.6 REQUIRED )
-find_package( OpenCV 4.0 REQUIRED )
+find_package( OpenCV REQUIRED )
 find_package( CURL REQUIRED ) 
 
-INCLUDE_DIRECTORIES ( ${SRCDIR} ${PYTHON_INCLUDE_DIRS} )
-INCLUDE_DIRECTORIES ( ${CURL_INCLUDE_DIR} )
-INCLUDE_DIRECTORIES ( ${RAPIDJSON_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES ( ${SRCDIR} ${RAPIDJSON_INC} ${CURL_INC} ${PYTHON_INCLUDE_DIRS} )
 
 file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/map_manager/*.cpp ${SRCDIR}/localizer/utm_converter.cpp ${EXTDIR}/qgroundcontrol/*.cpp *.cpp)
  
 add_executable( ${PROJECT_NAME} ${SOURCES} )
-
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} ${CURL_LIBRARIES})
 
 install( TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR} )
