--- a/examples/dg_simple/dg_simple.vcxproj.filters
+++ b/examples/dg_simple/dg_simple.vcxproj.filters
@@ -83,9 +83,6 @@
     <ClInclude Include="..\..\src\utils\utm_converter.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\core\shared_date.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\localizer\path_projector.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -108,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\localizer\data_loader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\core\shared_data.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
