--- a/examples/dg_module_test/dg_module_test.vcxproj
+++ b/examples/dg_module_test/dg_module_test.vcxproj
@@ -115,6 +115,7 @@
     <ClInclude Include="..\..\src\ocr_recog\ocr_recognizer.hpp" />
     <ClInclude Include="..\..\src\roadtheta\roadtheta.hpp" />
     <ClInclude Include="..\..\src\roadtheta\roadtheta_localizer.hpp" />
+    <ClInclude Include="..\..\src\utils\viewport.hpp" />
     <ClInclude Include="..\..\src\vps\vps.hpp" />
     <ClInclude Include="..\..\src\vps\vps_localizer.hpp" />
     <ClInclude Include="module_runner.hpp" />
