--- a/examples/dg_module_test/dg_module_test.vcxproj.filters
+++ b/examples/dg_module_test/dg_module_test.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="..\..\src\core\shared_data.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\utils\viewport.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
