--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -12,10 +12,10 @@ enable_imu: 1
 enable_mapserver: 1
 
 ### Main Options
-server_ip_index: 1     # 0: 127.0.0.1, 1: 129.254.81.204, ...
 site_index: 0            # 0: ETRI, 1: COEX, 2: Bucheon, ...
-server_ip_list: ["127.0.0.1", "129.254.81.204"]
 site_names: ["ETRI", "COEX", "Bucheon"]
+server_ip_index: 1     # 0: 127.0.0.1, 1: 129.254.81.204, ...
+server_ip_list: ["127.0.0.1", "129.254.81.204"]
 
 dg_srcdir: "./../src"              # path of deepguider/src folder (required for python embedding)
 enable_tts: 0
@@ -32,32 +32,29 @@ recording_header_name: "dg_simple_"
 ETRI:
   map_image_path: "data/NaverMap_ETRI(Satellite)_191127.png"
   map_data_path: "data/ETRI/TopoMap_ETRI_210803.csv"
-  map_ref_point_lat: 36.383837659737
-  map_ref_point_lon: 127.367880828442
+  map_ref_point_latlon: [36.3838376, 127.3678808]
+  map_ref_point_pixel: [347, 297]
   map_pixel_per_meter: 1.039
   map_image_rotation: 1.0
-  map_canvas_offset: [347, 297]
   gps_input_path: "data/191115_ETRI_asen_fix.csv"
   video_input_path: "data/191115_ETRI.avi"
 
 COEX:
   map_image_path: "data/NaverMap_COEX(Satellite)_200929.png"
   map_data_path: "data/COEX/TopoMap_COEX_210803.csv"
-  map_ref_point_lat: 37.506207
-  map_ref_point_lon: 127.05482
+  map_ref_point_latlon: [37.506207, 127.05482]
+  map_ref_point_pixel: [1090, 1018]
   map_pixel_per_meter: 1.055
   map_image_rotation: 1.2
-  map_canvas_offset: [1090, 1018]
   gps_input_path: "data/200925_153949_AndroSensor.csv"
   video_input_path: ""
 
 Bucheon:
   map_image_path: "data/NaverMap_Bucheon(Satellite).png" 
   map_data_path: "data/Bucheon/TopoMap_Bucheon_210803.csv"
-  map_ref_point_lat: 37.510928
-  map_ref_point_lon: 126.764344
+  map_ref_point_latlon: [37.510928, 126.764344]
+  map_ref_point_pixel: [1535, 1157]
   map_pixel_per_meter: 1.056
   map_image_rotation: 0
-  map_canvas_offset: [1535, 1157]
   gps_input_path: "data/Sensor_record_20210513_Bucheon_AndroSensor.csv"
   video_input_path: ""
