--- a/examples/dg_simple/dg_simple.vcxproj.filters
+++ b/examples/dg_simple/dg_simple.vcxproj.filters
@@ -95,9 +95,6 @@
     <ClInclude Include="..\..\src\intersection_cls\intersection_localizer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\lrpose_recog\lrpose_recognizer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\roadtheta\roadtheta.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -111,6 +108,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\utils\viewport.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\logo_recog\logo_localizer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\lrpose_recog\lrpose_localizer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
