[MapEditor] delete/add map object (node, edge, poi, streetview)

--- a/examples/map_editor/map_editor.vcxproj
+++ b/examples/map_editor/map_editor.vcxproj
@@ -121,6 +121,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\core\map.hpp" />
     <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="DlgEdge.h" />
     <ClInclude Include="DlgNode.h" />
