--- a/examples/map_editor/map_editor.vcxproj.filters
+++ b/examples/map_editor/map_editor.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="DlgView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\core\map.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapEditorDlg.cpp">
