--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -34,26 +34,26 @@ recording_header_name: "dg_ros_"
 ETRI_CART:
   topic_cam: "/uvc_camera/image_raw/compressed"
   topic_gps: "/ascen_gps/fix"
-  topic_dgps: "/gps/fix"
-  topic_imu: "/imu/data"
-  topic_rgbd_image: "/camera/color/image_raw/compressed"
-  topic_rgbd_depth: "/camera/depth/image_rect_raw/compressed"
+  #topic_dgps: "/gps/fix"
+  #topic_imu: "/imu/data"
+  #topic_rgbd_image: "/camera/color/image_raw/compressed"
+  #topic_rgbd_depth: "/camera/depth/image_rect_raw/compressed"
 
 ETRI_CART_VER1:
   topic_cam: "/uvc_image_raw/compressed"
   topic_gps: "/ascen_fix"
-  topic_dgps: "/novatel_fix"
-  topic_imu: "/imu/data"
-  topic_rgbd_image: "/camera/color/image_raw/compressed"
-  topic_rgbd_depth: "/camera/depth/image_rect_raw/compressed"
+  #topic_dgps: "/novatel_fix"
+  #topic_imu: "/imu/data"
+  #topic_rgbd_image: "/camera/color/image_raw/compressed"
+  #topic_rgbd_depth: "/camera/depth/image_rect_raw/compressed"
 
 KETI_ROBOT:
   topic_cam: "/usb_cam_1/image_raw/compressed"
   topic_gps: "/fix"
-  topic_dgps: ""
-  topic_imu: "/gx5/imu/data"
-  topic_rgbd_image: "/rs_front_camera1/color/image_raw/compressed"
-  topic_rgbd_depth: "/rs_front_camera1/aligned_depth_to_color/image_raw/compressed"
+  #topic_dgps: ""
+  #topic_imu: "/gx5/imu/data"
+  #topic_rgbd_image: "/rs_front_camera1/color/image_raw/compressed"
+  #topic_rgbd_depth: "/rs_front_camera1/aligned_depth_to_color/image_raw/compressed"
 
 ## Pre-defined Place Settings
 TEST_ETRI:
